src/styles.css
/* You can add global styles to this file, and also import other style files */
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=DM+Sans&family=Montserrat:wght@400;700;900&display=swap");

@import "tailwindcss";

img {
  max-width: unset;
  vertical-align: unset;
}

html {
  background-color: rgba(0, 0, 0, 0);
  display: flex;
  justify-content: center;
}

body {
  margin: 0;
  padding: 0;
  overflow: hidden;
}

:root {
  --light: #ffffff;
  --dark: #000000;
  --less-dark: #0f0f0f;
  --chat-msg: #dbdee1;
  --cerise: #e52e5e;
  --slate: #262626;
  --blue-dodger: #24affe;
  --tile-dark: #ffc700;
  --tile-light: #fffbd3;
  --grunge-slate: #262626;
}

.marker-square {
  fill: yellow !important;
  opacity: 0.5 !important;
}

